--- a/frontend/khelkhoj/src/index.css
+++ b/frontend/khelkhoj/src/index.css
@@ -6,7 +6,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+::-webkit-scrollbar{
+  width: 0px;
+}
+::-webkit-scrollbar-track{
+  background-color:#f4efe8 ;
+}
 
+::-webkit-scrollbar-thumb{
+  background-color: #F19006;
+  border-radius: 50px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
