--- a/frontend/khelkhoj/src/Styles/Register.css
+++ b/frontend/khelkhoj/src/Styles/Register.css
@@ -24,8 +24,8 @@
 }
 
 .profilePic:hover {
-    background-color: #CBB89E;
-    color: #FCFAF8;
+    color:#FFF ;
+    background-color:#000 ;
 }
 
 .profileContainer{
