--- a/frontend/khelkhoj/src/Styles/WelcomeUser.css
+++ b/frontend/khelkhoj/src/Styles/WelcomeUser.css
@@ -52,6 +52,29 @@
     color: #ff0000;
 }
 
+
+.tooltip {
+    position: absolute;
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    z-index: 1;
+    top: calc(100% + 5px); 
+    left: calc(50% + 10px); 
+    transform: translateX(-50%);
+    display: none;
+  }
+  
+  .logoutButton {
+    position: relative; 
+  }
+  
+  .logoutButton:hover .tooltip {
+    display: block; 
+  }
+
 .main {
     height: 638px;
     width: 100%;
@@ -120,14 +143,10 @@
     margin-left: 3%;
 }
 
-.rightBar {
-    height: 100%;
-    width: 80%;
-    overflow-y: auto; 
-}
-
-.greetContainer{
+   .greetContainer{
     min-height: 16%;
+    display: flex;
+    justify-content: left;
 }
 
 .greetUser{
@@ -135,69 +154,73 @@
     margin-left: 3%;
     font-family: 'Poppins',sans-serif;
 }
+.rightBar {
+    height: 100%; 
+    width: 80%;
+    overflow-y: auto;
+}
 
-.venueContainer{
-    display: grid;
-    height: 100vh;
+.venueContainer {
+    height: 100%; 
+    overflow-y: auto; 
+    overflow-x: hidden;
+}
+.groundActivityHeading{
+    font-family: 'Poppins',sans-serif;
+    margin: -8px;
+    margin-left: 3%;
+}
+.groundVenueContainer{
+    height: auto; 
     padding: 2%;
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
+    padding-bottom: 10%;
+    margin-bottom: 4%;
+    border-bottom: solid #9D7947 2px;
 }
 
 .venueCard {
-    min-width: 80%;
+
     cursor: pointer;
     font-family: 'Poppins',sans-serif;
-    height: 300px;
+    height: 400px;
     margin: 3%;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   }
-
-
-  .venuePic{
-    height: 60%;
-    background-position: center;
-    background-size: cover ;
-    background-repeat: no-repeat;
+  .venueCard p{
+    margin-left: 2%;
+  }
+ .venuePic {
+    max-height: 40%; 
+    width: 100%;
+    object-fit: cover; 
     border-radius: 10px;
-  }
+}
 
-  .venueName{
-    color:#F19006;
-    margin-top: 8px;
-    font-weight: 500;
-    margin-left: 3%;
-  }
+.activityCard {
 
-  .picLocation{
-    margin-top: -12px;
-    margin-left: 3%;
+    cursor: pointer;
+    font-family: 'Poppins',sans-serif;
+    height: 500px;
+    margin: 3%;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   }
-  .venueRating{
-    margin-top: -10px;
-    margin-left:3%;
+  .activityCard p{
+    margin-left: 2%;
   }
+  .emptyResults{
 
-  .tooltip {
-    position: absolute;
-    background-color: #333;
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 14px;
-    z-index: 1;
-    top: calc(100% + 5px); 
-    left: calc(50% + 10px); 
-    transform: translateX(-50%);
-    display: none;
+   grid-column: 1 / -1; /* This spans the full width of the grid */
+    grid-row: 1 / -1; /* This spans the full height of the grid */
+    /* background-color: #ff0000; */
+    font-family: 'Poppins', sans-serif;
+    height: 280px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
-  .logoutButton {
-    position: relative; 
-  }
-  
-  .logoutButton:hover .tooltip {
-    display: block; 
-  }
-  
