--- a/frontend/khelkhoj/src/Styles/Login.css
+++ b/frontend/khelkhoj/src/Styles/Login.css
@@ -1,240 +1,278 @@
-body{
-    top: 0;
-    right: 0;
-    font-family: 'Roboto',sans-serif;
+body {
+  top: 0;
+  right: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
-    background-color: #FCFAF8;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fcfaf8;
+  width: 100%;
 }
 .nav-links {
-    display: flex;
-    width: 80%;
-    justify-content: flex-end;
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
 }
 
 .nav-links ul {
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    margin-right: 0px;
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  margin-right: 0px;
 }
 
 .nav-links ul .links {
-    cursor: pointer;
-    font-family: 'Montserrat',sans-serif;
-    transition: all .5s ease;
-    font-size: 20px;
-    font-weight: bold;
-    color: #333;
-    margin-left: 35px; 
-    text-decoration: none;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
+  transition: all 0.5s ease;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  margin-left: 35px;
+  text-decoration: none;
 }
 
 .nav-links ul .links:hover {
-    color: #F19006; 
+  color: #f19006;
 }
 
-.formContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+.formContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
-.formLogo{
-    height: 100px;
-    width: 100px;
-    margin-bottom: 2%;
+.formLogo {
+  height: 100px;
+  width: 100px;
+  margin-bottom: 2%;
+  border-radius: 50px;
 }
 
-.form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 38%;
-    background-color: #FCFAF8;
-    border: 3px solid #CBB89E;
-    border-radius: 20px;
-    height: 100%;
-    margin-top: 1%;
-    padding: 2%;
-    box-shadow: 0px 25px 80px rgba(0, 0, 0, 0.15);
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 38%;
+  background-color: #fcfaf8;
+  border: 3px solid #cbb89e;
+  border-radius: 20px;
+  height: 100%;
+  margin-top: 1%;
+  padding: 2%;
+  box-shadow: 0px 25px 80px rgba(0, 0, 0, 0.15);
 }
 
-.login{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 50%;
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 50%;
 }
 
-.loginText{
-    font-family: 'Montserrat',sans-serif;
-    font-size: 28px;
+.loginText {
+  font-family: "Poppins", sans-serif;
+  font-size: 28px;
 }
 
-.labels{
-    margin-bottom: 1%;
-    font-weight: 600;
-    font-family: 'Montserrat', sans-serif;
+.labels {
+  margin-bottom: 1%;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
 }
 
-.loginButton{
-    transition: all .5s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F19006;
-    width: 38%; 
-    height: 18%;
-    padding: 8px; 
-    margin-bottom: 10px; 
-    border: none; 
-    border-radius: 10px; 
-    font-family: 'Montserrat',sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-    margin-top: 2%;
-    cursor: pointer;
+.updateButtonsHolder {
+  display: flex;
+  height: 100%;
+  width: 80%;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
-.loginButton:hover{
-    background-color: black;
-    color: #FCFAF8;
+.loginButton {
+  transition: all 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f19006;
+  width: 38%;
+  height: 18%;
+  text-decoration: none;
+  color: #000;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 2%;
+  cursor: pointer;
+}
+
+.noThanksUpdateButton {
+  transition: all 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  width: 38%;
+  height: 18%;
+  text-decoration: none;
+  color: #fff;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 2%;
+  cursor: pointer;
+}
+
+.loginButton:hover {
+  background-color: black;
+  color: #fcfaf8;
+}
+
+.noThanksUpdateButton:hover {
+  background-color: #f19006;
+  color: #000;
 }
 
 .inputField {
-    width: 52%; 
-    height: 20%;
-    padding: 14px; 
-    margin-bottom: 10px; 
-    border: 2px solid #CBB89E; 
-    border-radius: 10px; 
-    outline: none; 
-    font-family: 'Montserrat',sans-serif;
-    font-size: 18px;
+  width: 52%;
+  height: 20%;
+  padding: 14px;
+  margin-bottom: 10px;
+  border: 2px solid #cbb89e;
+  border-radius: 10px;
+  outline: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
 }
 
 .inputField::placeholder {
-    color: #9D7947;
-    font-size: 18px;
-    opacity: 1; 
-  }
+  color: #9d7947;
+  font-size: 18px;
+  opacity: 1;
+}
 
-.inputField option{
-    color: #9D7947;
-    font-size: 18px;
-    opacity: 1; 
-  }
+.inputField option {
+  color: #9d7947;
+  font-size: 18px;
+  opacity: 1;
+}
 
 .inputField:focus {
-    border-color: #000; 
+  border-color: #000;
 }
 
-.orDiv{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 60%;
+.orDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 60%;
 }
 
-.orDiv p{
-    font-size: 20px;
+.orDiv p {
+  font-size: 20px;
 }
 
-.regButton{
-    transition: all 0.5s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60%; 
-    height: 24%;
-    margin-top: 1%;
-    color: black;
-    padding: 10px; 
-    margin-bottom: 8px; 
-    border: 1px solid #9D7947;
-    background-color: #FCFAF8;
-    border-radius: 10px; 
-    font-family: 'Montserrat',sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-    text-decoration: none;
+.regButton {
+  transition: all 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 24%;
+  margin-top: 1%;
+  color: black;
+  padding: 10px;
+  margin-bottom: 8px;
+  border: 1px solid #9d7947;
+  background-color: #fcfaf8;
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  text-decoration: none;
 }
 
-.regButton:hover{
-    color: #FCFAF8;
-    border: 1px solid #FCFAF8;
-    background-color: #000;
+.regButton:hover {
+  color: #fcfaf8;
+  border: 1px solid #fcfaf8;
+  background-color: #000;
 }
 
-.notUserContainer p{
-    text-decoration: none;
-    font-size: 14px;
-    color: #000;
+.notUserContainer p {
+  text-decoration: none;
+  font-size: 14px;
+  color: #000;
 }
 
-.notUserLink{
-    text-decoration: none;
-    color: #000;
+.notUserLink {
+  text-decoration: none;
+  color: #000;
 }
 
 .passwordInputContainer {
-    position: relative;
-    display: flex;
-  }
-  
-  .eyeIcon {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    cursor: pointer;
-    z-index: 1;
-  }
+  position: relative;
+  display: flex;
+}
 
-  .inputFieldPass{
-    height: 20%;
-    padding: 14px; 
-    margin-bottom: 10px; 
-    border: 2px solid #CBB89E; 
-    border-radius: 10px; 
-    outline: none; 
-    font-family: 'Montserrat',sans-serif;
-    font-size: 18px;
-    width: calc(100% - 40px); 
-  padding-right: 40px; 
+.eyeIcon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  z-index: 1;
+}
+
+.inputFieldPass {
+  height: 20%;
+  padding: 14px;
+  margin-bottom: 10px;
+  border: 2px solid #cbb89e;
+  border-radius: 10px;
+  outline: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  width: calc(100% - 40px);
+  padding-right: 40px;
   padding-left: 30px;
-  }
+}
 
-  .inputFieldPass::placeholder {
-    color: #9D7947;
-    font-size: 18px;
-    opacity: 1; 
-  }
+.inputFieldPass::placeholder {
+  color: #9d7947;
+  font-size: 18px;
+  opacity: 1;
+}
 
 .inputFieldPass:focus {
-    border-color: #000; 
+  border-color: #000;
 }
-.eyeIcon{
-    transition: all .5s ease;
-    height: 30%;
-    padding-bottom:4%;
-    /* margin-right: px; */
+.eyeIcon {
+  transition: all 0.5s ease;
+  height: 30%;
+  padding-bottom: 4%;
+  /* margin-right: px; */
 }
-.eyeIcon:hover{
-color: #F19006;
+.eyeIcon:hover {
+  color: #f19006;
 }
