--- a/frontend/khelkhoj/src/Styles/WelcomeUser.css
+++ b/frontend/khelkhoj/src/Styles/WelcomeUser.css
@@ -1,228 +1,265 @@
 .userProfile {
-    height: 46px;
-    width: 46px;
-    border-radius: 50px;
+  height: 46px;
+  width: 46px;
+  border-radius: 50px;
 }
 
-.header{
-    width: 100%;
+.header {
+  width: 100%;
 }
-.links{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10%;
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10%;
 }
 
-.ulLink{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.ulLink {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .searchBox {
-    width: 64%;
-    height: 22%;
-    padding: 14px;
-    margin-right: 10%;
-    border: 2px solid #9D7947;
-    border-radius: 10px;
-    outline: none;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+  width: 64%;
+  height: 22%;
+  padding: 14px;
+  margin-right: 10%;
+  border: 2px solid #333;
+  border-radius: 10px;
+  outline: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
 }
 
 .searchContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 78%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 78%;
 }
 
-.logoutButton{
-    transition: all .5s ease;
-    font-size: 20px;
-    color: #333;
-    margin-left: 26px; 
-    text-decoration: none;
+.logoutButton {
+  transition: all 0.5s ease;
+  font-size: 20px;
+  color: #333;
+  margin-left: 26px;
+  text-decoration: none;
 }
 
-.logoutButton:hover{
-    cursor: pointer;
-    color: #ff0000;
+.logoutButton:hover {
+  cursor: pointer;
+  color: #ff0000;
 }
-
 
 .tooltip {
-    position: absolute;
-    background-color: #333;
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 14px;
-    z-index: 1;
-    top: calc(100% + 5px); 
-    left: calc(50% + 10px); 
-    transform: translateX(-50%);
-    display: none;
-  }
-  
-  .logoutButton {
-    position: relative; 
-  }
-  
-  .logoutButton:hover .tooltip {
-    display: block; 
-  }
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  z-index: 1;
+  top: calc(100% + 5px);
+  left: calc(50% + 10px);
+  transform: translateX(-50%);
+  display: none;
+}
+
+.logoutButton {
+  position: relative;
+}
+
+.logoutButton:hover .tooltip {
+  display: block;
+}
 
 .main {
-    height: 638px;
-    width: 100%;
-    display: flex;
-    overflow: hidden;
+  height: 638px;
+  width: 100%;
+  display: flex;
+  overflow: hidden;
 }
 
 .leftBar {
-    display: flex;
-    font-family: 'Poppins', sans-serif;
-    flex-direction: column;
-    width: 20%;
-    height: 100%;
-    border-right: solid #9D7947 1px;
-    background-color: #FCFAF8;
-    padding: 2%;
-    overflow-y: auto; 
+  display: flex;
+  font-family: "Poppins", sans-serif;
+  flex-direction: column;
+  width: 20%;
+  height: 100%;
+  border-right: solid #9d7947 1px;
+  background-color: #fcfaf8;
+  padding: 2%;
+  overflow-y: auto;
 }
 
 .leftBar h2 {
-    color: #9D7947;
-    font-weight: 500;
-    margin-top: 6%;
+  color: #f19006;
+  font-weight: 500;
+  margin-top: 6%;
 }
 
-.leftCardContainer{
-    list-style-type: none;
-    flex-direction: column;
-    margin: 0;
-    align-items: center;
-    padding: 0;
-    justify-content: center;
-    display: flex;
-    margin-right: 0px;
-    padding-bottom: 20%;
+.leftCardContainer {
+  list-style-type: none;
+  flex-direction: column;
+  margin: 0;
+  align-items: center;
+  padding: 0;
+  justify-content: center;
+  display: flex;
+  margin-right: 0px;
+  padding-bottom: 20%;
+}
+
+.noBookings {
+  height: 300px;
+  border-radius: 50px;
+  background-color: #f4efe8;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 
 .cardsLeft {
-    
-    border-radius: 10px;
-    margin-top: 5%;
-    height: 200px;
-    width: 280px;
-    padding: 3%;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+  border-radius: 10px;
+  margin-top: 5%;
+  height: 200px;
+  width: 280px;
+  text-decoration: none;
+  color: #333;
+  padding: 3%;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 
-.cardsLeft:hover{
-    cursor: pointer;
+.seeAll {
+  height: 60px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-top: 20px;
+  padding: 1%;
+  border-radius: 10px;
+  background-color: #000;
+  color: #fff;
+  transition: all 0.5s ease;
+  font-size: 18px;
+  text-decoration: none;
 }
 
-.venueLeft{
-    margin-left: 3%;
-    color: #9D7947;
+.seeAll:hover {
+  background-color: #f19006;
+  color: #333;
 }
 
-.activityLeft{
-    margin-left: 3%;
+.cardsLeft:hover {
+  cursor: pointer;
 }
 
-.dayLeft{
-    margin-left: 3%;
+.venueLeft {
+  margin-left: 3%;
+  color: #9d7947;
 }
 
-.slotLeft{
-    margin-left: 3%;
+.activityLeft {
+  margin-left: 3%;
 }
 
-   .greetContainer{
-    min-height: 16%;
-    display: flex;
-    justify-content: left;
+.dayLeft {
+  margin-left: 3%;
 }
 
-.greetUser{
-    margin-top: 4%;
-    margin-left: 3%;
-    font-family: 'Poppins',sans-serif;
+.slotLeft {
+  margin-left: 3%;
+}
+
+.greetContainer {
+  min-height: 140px;
+  display: flex;
+  justify-content: left;
+}
+
+.greetUser {
+  margin-top: 3%;
+  margin-left: 3%;
+  font-size: 30px;
+  font-family: "Poppins", sans-serif;
 }
 .rightBar {
-    height: 100%; 
-    width: 80%;
-    overflow-y: auto;
+  height: 100%;
+  width: 80%;
+  overflow-y: auto;
 }
 
 .venueContainer {
-    height: 100%; 
-    overflow-y: auto; 
-    overflow-x: hidden;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
-.groundActivityHeading{
-    font-family: 'Poppins',sans-serif;
-    margin: -8px;
-    margin-left: 3%;
+.groundActivityHeading {
+  font-family: "Poppins", sans-serif;
+  margin: -8px;
+  margin-left: 3%;
 }
-.groundVenueContainer{
-    height: auto; 
-    padding: 2%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    padding-bottom: 10%;
-    margin-bottom: 4%;
-    border-bottom: solid #9D7947 2px;
+.groundVenueContainer {
+  height: auto;
+  padding: 2%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  padding-bottom: 10%;
+  margin-bottom: 4%;
+  border-bottom: solid #9d7947 2px;
 }
 
 .venueCard {
-    text-decoration: none;
-    color: #333;
-    cursor: pointer;
-    font-family: 'Poppins',sans-serif;
-    height: 400px;
-    margin: 3%;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-  }
-  .venueCard p{
-    margin-left: 2%;
-  }
- .venuePic {
-    max-height: 40%; 
-    width: 100%;
-    object-fit: cover; 
-    border-radius: 10px;
+  text-decoration: none;
+  color: #333;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  height: 400px;
+  margin: 3%;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+}
+.venueCard p {
+  margin-left: 2%;
+}
+.venuePic {
+  max-height: 40%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .activityCard {
-    text-decoration: none;
-    color: #333;
-    cursor: pointer;
-    font-family: 'Poppins',sans-serif;
-    height: 500px;
-    margin: 3%;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-  }
-  .activityCard p{
-    color: #333;
-    margin-left: 2%;
-  }
+  text-decoration: none;
+  color: #333;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  height: 500px;
+  margin: 3%;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+}
+.activityCard p {
+  color: #333;
+  margin-left: 2%;
+}
 
-  .emptyResults{
-   grid-column: 1 / -1; /* This spans the full width of the grid */
-    grid-row: 1 / -1; /* This spans the full height of the grid */
-    font-family: 'Poppins', sans-serif;
-    height: 280px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.emptyResults {
+  grid-column: 1 / -1; /* This spans the full width of the grid */
+  grid-row: 1 / -1; /* This spans the full height of the grid */
+  font-family: "Poppins", sans-serif;
+  height: 280px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
