--- a/frontend/khelkhoj/src/index.css
+++ b/frontend/khelkhoj/src/index.css
@@ -1,23 +1,24 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fcfaf8;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 0px;
 }
-::-webkit-scrollbar-track{
-  background-color:#f4efe8 ;
+::-webkit-scrollbar-track {
+  background-color: #f4efe8;
 }
 
-::-webkit-scrollbar-thumb{
-  background-color: #F19006;
+::-webkit-scrollbar-thumb {
+  background-color: #f19006;
   border-radius: 50px;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
