--- a/frontend/khelkhoj/src/Styles/BookingModal.css
+++ b/frontend/khelkhoj/src/Styles/BookingModal.css
@@ -11,7 +11,8 @@
 
 .modalBox {
   font-family: "Poppins", sans-serif;
-  height: 48%;
+  min-height: 48%;
+  height: auto;
   padding: 1%;
   border-radius: 10px;
   background-color: #fcfaf8;
@@ -59,7 +60,7 @@
 }
 
 .bookConButtonsContainer {
-  height: 20%;
+  height: 68px;
   padding: 1%;
   display: flex;
   align-items: center;
