--- a/frontend/khelkhoj/src/Styles/WelcomeUser.css
+++ b/frontend/khelkhoj/src/Styles/WelcomeUser.css
@@ -243,7 +243,7 @@
   color: #333;
   cursor: pointer;
   font-family: "Poppins", sans-serif;
-  height: 500px;
+  height: auto;
   margin: 3%;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
