--- a/frontend/khelkhoj/src/Styles/Register.css
+++ b/frontend/khelkhoj/src/Styles/Register.css
@@ -1,57 +1,56 @@
-.form{
-    height: 100%;
-    margin-bottom: 2%;
+.form {
+  height: 100%;
+  margin-bottom: 2%;
 }
 
-
-.inputField { 
-    margin-bottom: 12px; 
+.inputField {
+  margin-bottom: 12px;
 }
 
-.profilePic{
-    transition: all 0.5s ease;
-    text-align: center;
-    height: 15%;
-    padding: 10px; 
-    background-color: #FCFAF8;
-    border: 2px solid #CBB89E; 
-    border-radius: 10px; 
-    outline: none; 
-    font-family: 'Montserrat',sans-serif;
-    font-size: 18px;
-    cursor: pointer;
-    color: #9D7947;
+.profilePic {
+  transition: all 0.5s ease;
+  text-align: center;
+  height: 15%;
+  padding: 10px;
+  background-color: #fcfaf8;
+  border: 2px solid #cbb89e;
+  border-radius: 10px;
+  outline: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  color: #9d7947;
 }
 
 .profilePic:hover {
-    color:#FFF ;
-    background-color:#000 ;
+  color: #fff;
+  background-color: #000;
 }
 
-.profileContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.profileContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.dateInputField{
-    width: 300px; 
-    height: 20%;
-    padding: 14px; 
-    margin-bottom: 10px; 
-    border: 2px solid #CBB89E; 
-    border-radius: 10px; 
-    outline: none; 
-    font-family: 'Montserrat',sans-serif;
-    font-size: 18px;
+.dateInputField {
+  width: 300px;
+  height: 20%;
+  padding: 14px;
+  margin-bottom: 10px;
+  border: 2px solid #cbb89e;
+  border-radius: 10px;
+  outline: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
 }
 
-.errorContainer{
-    width: 78%;
-    font-weight: 500;
-    text-align: center;
-    font-family: 'Poppins',sans-serif;
-    color: #ff0000;
-    margin-bottom: 1%;
+.errorContainer {
+  width: 78%;
+  font-weight: 500;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  color: #ff0000;
+  margin-bottom: 1%;
 }
