--- a/frontend/khelkhoj/src/Styles/WelcomeUser.css
+++ b/frontend/khelkhoj/src/Styles/WelcomeUser.css
@@ -26,7 +26,7 @@
   padding: 14px;
   margin-right: 10%;
   border: 2px solid #333;
-  border-radius: 10px;
+  border-radius: 50px;
   outline: none;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
@@ -188,6 +188,8 @@
 .greetUser {
   margin-top: 3%;
   margin-left: 3%;
+  display: flex;
+  align-items: center;
   font-size: 30px;
   font-family: "Poppins", sans-serif;
 }
@@ -201,6 +203,8 @@
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+  border-top: solid #9d7947 1px;
+  padding-top: 2%;
 }
 .groundActivityHeading {
   font-family: "Poppins", sans-serif;
@@ -236,6 +240,11 @@
   width: 100%;
   object-fit: cover;
   border-radius: 10px;
+}
+
+.venueLink {
+  width: 100%;
+  height: 100%;
 }
 
 .activityCard {
