--- a/frontend/khelkhoj/src/Styles/AllBookings.css
+++ b/frontend/khelkhoj/src/Styles/AllBookings.css
@@ -1,7 +1,8 @@
 .groundBookingContainer {
   height: auto;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-wrap: wrap;
+  /* grid-template-columns: repeat(4, 1fr); */
   grid-gap: 10px;
   margin-right: 1%;
   margin-left: 1%;
@@ -22,8 +23,9 @@
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   padding: 1%;
   border-radius: 10px;
-  padding-left: 2%;
-  margin: 2%;
+  width: 230px;
+  /* padding-left: 2%; */
+  margin: 1%;
   height: 100%;
 }
 
@@ -35,12 +37,11 @@
   height: 200px;
   border-radius: 50px;
   background-color: #f4efe8;
-  width: 80%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 460px;
-  margin-top: 10%;
+  margin-left: 600px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
