--- a/frontend/khelkhoj/src/index.css
+++ b/frontend/khelkhoj/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fcfaf8;
+  cursor: default;
 }
 ::-webkit-scrollbar {
   width: 0px;
