--- a/frontend/khelkhoj/src/Styles/AllBookings.css
+++ b/frontend/khelkhoj/src/Styles/AllBookings.css
@@ -7,7 +7,7 @@
   margin-right: 1%;
   margin-left: 1%;
   /* padding-bottom: 10%; */
-  margin-bottom: 4%;
+  /* margin-bottom: 4%; */
   width: 98%;
 }
 
