--- a/frontend/khelkhoj/src/Styles/WelcomeUser.css
+++ b/frontend/khelkhoj/src/Styles/WelcomeUser.css
@@ -221,13 +221,48 @@
   margin-bottom: 4%;
   border-bottom: solid #9d7947 2px;
 }
+@keyframes shine {
+  0% {
+    background-position: 100% 0;
+  }
+  100% {
+    background-position: -100% 0;
+  }
+}
+
+.popular {
+  color: #000;
+  font-weight: 600;
+  width: auto;
+  height: 8%;
+  padding-left: 1%;
+  padding-right: 1%;
+  position: absolute;
+  top: 7px;
+  right: 7px;
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    rgba(255, 255, 255, 0.5) 50%,
+    transparent 100%
+  );
+  background-color: #f19006;
+  background-size: 200% 100%;
+  animation: shine 2s infinite linear;
+}
 
 .venueCard {
   text-decoration: none;
   color: #333;
   cursor: pointer;
+  position: relative;
   font-family: "Poppins", sans-serif;
-  height: 400px;
+  height: auto;
   margin: 3%;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
@@ -273,6 +308,23 @@
   align-items: center;
 }
 
+.stats {
+  border-radius: 20px;
+  background-color: #f4efe8;
+  display: flex;
+  height: 20px;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  flex-direction: row;
+  padding: 4%;
+  padding-left: 5%;
+  padding-right: 5%;
+  width: auto;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+  margin-left: 40px;
+}
+
 .wallet {
   border-radius: 20px;
   background-color: #f4efe8;
@@ -306,6 +358,16 @@
   align-items: center;
   width: auto;
   height: 100%;
+  color: #000;
+  text-decoration: none;
+}
+
+.statsLink {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  width: auto;
+  height: 30px;
   color: #000;
   text-decoration: none;
 }
