--- a/frontend/khelkhoj/src/Styles/Login.css
+++ b/frontend/khelkhoj/src/Styles/Login.css
@@ -153,7 +153,6 @@ body {
 }
 
 .inputField {
-  width: 52%;
   transition: all 0.5s ease;
   height: 20%;
   padding: 14px;
@@ -234,7 +233,7 @@ body {
 .eyeIcon {
   position: absolute;
   top: 50%;
-  right: 10px;
+  right: 30px;
   transform: translateY(-50%);
   cursor: pointer;
   z-index: 1;
@@ -243,13 +242,14 @@ body {
 .inputFieldPass {
   height: 20%;
   padding: 14px;
+  margin-left: 8%;
   margin-bottom: 10px;
   border: 2px solid #cbb89e;
   border-radius: 10px;
   outline: none;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
-  width: calc(100% - 40px);
+  width: calc(100% - 118px);
   padding-right: 40px;
   padding-left: 30px;
 }
